# sm_connect

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  aws.rs  components.rs  history.rs  main.rs
src/app/: config.rs
src/components/: config_panel.rs  instance_selection.rs  instance_table.rs  region_list.rs  text_input.rs
src/components/config_panel/: config_list.rs
