[package]
name = "sm_connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-ec2 = "1.105.0"
tokio = { version = "1.43.0", features = ["full"] }
ratatui = { version = "0.29.0", features = ["all-widgets"]}
anyhow = "1.0.95"
crossterm = "0.28.1"
signal-hook = "0.3.17"
aws-config = "1.5.4"
configparser = "3.1.0"
home = "0.5.11"
thiserror = "2.0.11"
